--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://cgutt-hub.github.io/cagatay"
+base_url = "https://cgutt-hub.github.io/5ha99y"
 
 # The site title and description
 title = "Çağatay Özcan Jagiello Gutt"
